# optimization

./: .gitignore  Cargo.toml  lab-instructions  lectures
.github/: copilot-instructions.md
labs/lab01/: main.rs
labs/lab02/: main.rs
labs/lab03/: main.rs
labs/lab04/: main.rs
labs/lab05/: main.rs
labs/lab06/: main.rs
labs/lab07/: main.rs
labs/lab08/: main.rs
labs/lab09/: main.rs
labs/lab1/: main.rs
labs/lab10/: main.rs
labs/lab2/: main.rs
labs/lab3/: main.rs
labs/lab4/: main.rs
labs/lab5/: main.rs
labs/lab6/: main.rs
labs/lab7/: main.rs
labs/lab8/: main.rs
labs/lab9/: main.rs
src/: dicothomic.rs  fibonacci.rs  function.rs  functions.rs  golden.rs  helpers.rs  lib.rs  linalg.rs  optimizer.rs
src/linear/: dicothomic.rs  fibonacci.rs  golden.rs  gradient_descent.rs  mod.rs  newton.rs
src/multivariate/: active_set.rs  branch_bound.rs  conjugate.rs  constrained.rs  dynamic_programming.rs  genetic.rs  gradient.rs  mod.rs  newton.rs  quasi_newton.rs  simplex.rs  simulated_annealing.rs  sqp.rs
src/quadratic/: conjugate.rs  constrained.rs  genetic.rs  mod.rs  newton_raphson.rs  simplex.rs
src/univariate/: dichotomy.rs  fibonacci.rs  golden.rs  mod.rs  newton.rs
