[package]
name = "optimization"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
rand = "0.10.0"
plotly = "0.14.1"
itertools = "0.15.0"

[[example]]
name = "lab1"
path = "labs/lab1/main.rs"

[[example]]
name = "lab2"
path = "labs/lab2/main.rs"

[[example]]
name = "lab3"
path = "labs/lab3/main.rs"

[[example]]
name = "lab4"
path = "labs/lab4/main.rs"

[[example]]
name = "lab5"
path = "labs/lab5/main.rs"


