[package]
name = "optimization"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
rand = "0.10.0"
plotly = "0.14.1"
itertools = "0.15.0"

[[example]]
name = "lab01"
path = "labs/lab01/main.rs"

[[example]]
name = "lab02"
path = "labs/lab02/main.rs"

[[example]]
name = "lab03"
path = "labs/lab03/main.rs"

[[example]]
name = "lab04"
path = "labs/lab04/main.rs"

[[example]]
name = "lab05"
path = "labs/lab05/main.rs"

[[example]]
name = "lab06"
path = "labs/lab06/main.rs"

[[example]]
name = "lab07"
path = "labs/lab07/main.rs"

[[example]]
name = "lab08"
path = "labs/lab08/main.rs"

[[example]]
name = "lab09"
path = "labs/lab09/main.rs"

[[example]]
name = "lab10"
path = "labs/lab10/main.rs"



